...
import com.android.gatherly.ui.navigation.TopNavigationMenu_Goback
import com.android.gatherly.ui.todo.toDoTextFieldColors
import com.android.gatherly.utils.profilePicturePainter

/** Object containing test tags for the AddGroupScreen and its components. */
object AddGroupScreenTestTags {
  const val BUTTON_CREATE_GROUP = "buttonCreateGroup"
  const val GROUP_NAME_FIELD = "groupNameField"
  const val GROUP_DESCRIPTION_FIELD = "groupDescriptionField"
  const val SEARCH_FRIENDS_BAR = "searchFriendsBar"
  const val EMPTY_LIST_MSG = "emptyListMessage"
  const val NAME_ERROR_MESSAGE = "nameErrorMessage"

  /**
   * Returns a unique test tag for the card representing a given friend.
   *
   * @param friend The friend whose test tag will be generated.
   * @return A string uniquely identifying the friend's card in the UI.
...
