...

// This file was inspired by AddGroupScreen.kt in this project.

/** Object containing test tags for the EditGroupScreen and its components. */
object EditGroupScreenTestTags {

  const val LAZY_COLUMN_GROUP = "lazy_column_edit_group"
  const val BUTTON_SAVE_GROUP = "buttonSaveGroup"

  const val BUTTON_DELETE_GROUP = "buttonDeleteGroup"
  const val GROUP_NAME_FIELD = "editGroupNameField"
  const val GROUP_DESCRIPTION_FIELD = "editGroupDescriptionField"
  const val SEARCH_FRIENDS_BAR = "editSearchFriendsBar"
  const val EMPTY_FRIENDS_MSG = "editEmptyFriendsMessage"
  const val NAME_ERROR_MESSAGE = "editNameErrorMessage"

  const val GENERAL_ERROR_MESSAGE = "editGroupGeneralErrorMessage"

  /**
...
